--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,74 @@
 .container {
-    background-color: #c00025;
-    width: 100%;
+    background-color: #c01045;
+    width: 33vw;
     max-width: 550px;
     border-radius: 15px;
     border: 2px solid grey;
-    padding-bottom: 25px;
+    padding: 25px;
 }
 .display {
     margin-top: 25px;
     height: 100px;
-    width: 450px;
+    width: auto;
     border-radius: 50px;
     color: white;
     background-color: #322c2d;
     box-shadow: 1px 1px #322c2d;
     display: flex;
     justify-content: flex-end;
-    align-items: flex-end;
+    align-items: center;
+    align-content: center;
     padding-right: 8%;
-    font-size: 5.0rem;
-  }
+    font-size: 3.0rem;
+}
+
+.logo {
+    width: 20%;
+}
+
+.Display {
+    padding-bottom: 25px;
+}
+
+.flex {
+    display: flex;
+    justify-content: space-between;
+}
+
+.one {
+    width: 25%;
+}
+
+.three{
+    width:75%;
+}
+
+.row {
+    flex-direction: row;
+}
+
+.column{
+    flex-direction: column;
+}
+
+.wrap {
+    flex-wrap: wrap;
+}
+
+.right{
+    
+}
+
+.row_one {
+    width:30%;
+}
+
+.zero {
+    width:66%;
+}
+
+.button {
+    height: 5rem;
+    border-radius: 2.5rem;
+    font-size: 2.5rem;
+}
