fixed green hue on operators

--- a/src/App.css
+++ b/src/App.css
@@ -65,7 +65,7 @@
     margin: .4vw;
     border-radius: 4vw;
     font-size: 3.5vw;
-    background-color: #0acece;
+    background-color: #59c5f7;
     color: #d8dac3;
 }
 
